KAlarm

=== Version 0.9.3 --- 2 Mar 2003 ===
Fix display of "Invalid date" message before Edit Alarm dialog displays.

=== Version 0.9.2 --- 28 Feb 2003 ===
Option to set font for individual alarm messages.
Allow multiple alarm selection in the main window.
KAlarm icon in alarm message window selects the alarm in the main window.
In Edit Alarm dialog, move all recurrence edit controls into Recurrence tab.
Add quit warning message option to preferences dialog.
Add "New Alarm" option to system tray context menu.
Disallow command alarms when KDE is running in kiosk mode.
Revised storage of beep, font, colour and program arguments in calendar file.
Always save alarms in iCalendar format (but vCalendar may still be read).
Add reminder, recurrence and font parameters to DCOP calls.
Fix failure to enable alarms when running in on-demand mode.

=== Version 0.9.1 --- 16 Jan 2003 ===
Add option to set advance reminders for alarms.
In run-in-system-tray mode, warn that alarms will be disabled before quitting.
Fix monthly and yearly recurrences on nth Monday etc. of the month.
Fix yearly recurrences on February 29th.
Fix recurrence start times stored in expired calendar file.
Fix extra empty events being stored in expired calendar file.

=== Version 0.9.0 --- 29 Dec 2002 ===
Add facility to import birthdays from KAddressBook
Add option to send an email instead of displaying an alarm message.
Add option to store and view expired alarms.
Add copy, view and undelete actions (as applicable) for the selected alarm.
In alarm message window, message text can be copied to clipboard using mouse.
Allow message text to be scrolled in alarm message window if too big to fit.
Shift key with left mouse button steps time edit arrows by 5 minutes/6 hours.
Report failure to run command alarm (bash, ksh shells only).
Retain repeat-at-login status on alarm deferral.
Restore alarm messages which were displayed before KAlarm was killed or crashed.