@@ -45,7 +45,8 @@ const bool       Preferences::default_defaultLateCancel       = false;
 const bool       Preferences::default_defaultConfirmAck       = false;
 const bool       Preferences::default_defaultBeep             = false;
 const bool       Preferences::default_defaultEmailBcc         = false;
-const QString    Preferences::default_emailAddress            = "";
+const QString    Preferences::default_defaultSoundFile        = QString::null;
+const QString    Preferences::default_emailAddress            = QString::null;
 const Preferences::MailClient    Preferences::default_emailClient          = KMAIL;
 const RecurrenceEdit::RepeatType Preferences::default_defaultRecurPeriod   = RecurrenceEdit::NO_RECUR;
 const Reminder::Units            Preferences::default_defaultReminderUnits = Reminder::HOURS_MINUTES;
@@ -71,6 +72,7 @@ static const QString EXPIRED_KEEP_DAYS        = QString::fromLatin1("ExpiredKeep
 static const QString DEFAULTS_SECTION         = QString::fromLatin1("Defaults");
 static const QString DEF_LATE_CANCEL          = QString::fromLatin1("DefLateCancel");
 static const QString DEF_CONFIRM_ACK          = QString::fromLatin1("DefConfirmAck");
+static const QString DEF_SOUND_FILE           = QString::fromLatin1("DefSoundFile");
 static const QString DEF_BEEP                 = QString::fromLatin1("DefBeep");
 static const QString DEF_EMAIL_BCC            = QString::fromLatin1("DefEmailBcc");
 static const QString DEF_RECUR_PERIOD         = QString::fromLatin1("DefRecurPeriod");
@@ -120,6 +122,7 @@ void Preferences::loadPreferences()
 	mDefaultLateCancel       = config->readBoolEntry(DEF_LATE_CANCEL, default_defaultLateCancel);
 	mDefaultConfirmAck       = config->readBoolEntry(DEF_CONFIRM_ACK, default_defaultConfirmAck);
 	mDefaultBeep             = config->readBoolEntry(DEF_BEEP, default_defaultBeep);
+	mDefaultSoundFile        = mDefaultBeep ? QString::null : config->readEntry(DEF_SOUND_FILE);
 	mDefaultEmailBcc         = config->readBoolEntry(DEF_EMAIL_BCC, default_defaultEmailBcc);
 	int recurPeriod          = config->readNumEntry(DEF_RECUR_PERIOD, default_defaultRecurPeriod);
 	mDefaultRecurPeriod      = (recurPeriod < RecurrenceEdit::SUBDAILY || recurPeriod > RecurrenceEdit::ANNUAL)
@@ -152,6 +155,7 @@ void Preferences::savePreferences(bool syncToDisc)
 	config->writeEntry(DEF_LATE_CANCEL, mDefaultLateCancel);
 	config->writeEntry(DEF_CONFIRM_ACK, mDefaultConfirmAck);
 	config->writeEntry(DEF_BEEP, mDefaultBeep);
+	config->writeEntry(DEF_SOUND_FILE, (mDefaultBeep ? QString::null : mDefaultSoundFile));
 	config->writeEntry(DEF_EMAIL_BCC, mDefaultEmailBcc);
 	config->writeEntry(DEF_RECUR_PERIOD, mDefaultRecurPeriod);
 	config->writeEntry(DEF_REMIND_UNITS, mDefaultReminderUnits);
